--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="upper-section">
-            <img class="header-logo" src="/images/videography.png" width="100px"/> 
+            <img class="header-logo" src="images/videography.png" width="100px"/> 
                 <ul class="links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Categories</a></li>
@@ -22,7 +22,7 @@
                 <div class="text">Immerse yourself in a world of entertainment as we bring you an extensive collection of movies from various genres and eras.<br> Whether you seek adventure, romance, laughter, or thrills, we've got your ticket to an endless stream of captivating stories.<br> Get ready to explore, discover, and experience the magic of cinema right from the comfort of your screen. </div>
                 <button class="sign-up">sign up</button>
             </div>
-            <img src="/images/Classy Movie.png"/>
+            <img src="images/Classy Movie.png"/>
         </div>
     </div>
     <div class="information">
@@ -31,8 +31,8 @@
             <div class="info">
                 <a href="#">
                     <div  class="play-button">
-                        <img src="/images/John-Wick2.jpg" />
-                        <img class="play" src="/images/play.png" >
+                        <img src="images/John-Wick2.jpg" />
+                        <img class="play" src="images/play.png" >
                     </div>  
                 </a>
                 <div class="text">John Wick</div>
@@ -40,8 +40,8 @@
             <div class="info">
                 <a href="#">
                     <div class="play-button">
-                        <img src="/images/Joker2.jpg" />
-                        <img class="play" src="/images/play.png">
+                        <img src="images/Joker2.jpg" />
+                        <img class="play" src="images/play.png">
                         </div>
                     </a>
                 <div class="text">Joker</div>
@@ -49,8 +49,8 @@
             <div class="info">
                 <a href="#">
                     <div class="play-button">
-                        <img src="/images/Inception.jpg" />
-                        <img class="play" src="/images/play.png">
+                        <img src="images/Inception.jpg" />
+                        <img class="play" src="images/play.png">
                     </div>
                 </a>
                 <div class="text">Inception</div>
@@ -58,8 +58,8 @@
             <div class="info">
                 <a href="#" >
                     <div class="play-button">
-                        <img src="/images/Star-Wars1080p.jpg" />
-                        <img class="play" src="/images/play.png">
+                        <img src="images/Star-Wars1080p.jpg" />
+                        <img class="play" src="images/play.png">
                     </div>
                 </a>
                 <div class="text">Star wars</div>
