--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="info">
                 <a href="#" >
                     <div class="play-button">
-                        <img src="images/Star-Wars1080p.jpg" />
+                        <img src="images/Star-wars1080p.jpg" />
                         <img class="play" src="images/play.png">
                     </div>
                 </a>
